[package]
name = "mutex-buffered-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full", "tracing"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async", "async_tokio"] }
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "bench"
harness = false
