[package]
name = "mutex-buffered-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full", "tracing"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async", "async_tokio"] }
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

[[bench]]
name = "bench"
harness = false
